--- a/index.html
+++ b/index.html
@@ -10,38 +10,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
 </head>
 <body>
-    <!--
-    <nav class="navigation">
-        <a class="#"> </a>
-        <button class="btnLogin-popup">Login</button>
-    </nav>
--->
-    
     <header class="text-white text-center fade-in">
         <h1>🌸 Bienvenido al mundo otaku sin afecto femenino 🌸</h1>
         <p>Todo sobre waifus, mangas, animes, y lolis (con responsabilidad)</p>
     </header>
 
-       <!-- Botón hamburguesa -->
-        <button id="toggleMenu" class="hamburger-btn" aria-label="Menú de usuario">☰</button>
+       ;<!-- Botón hamburguesa --> <button id="toggleMenu" class="hamburger-btn" aria-label="Menú de usuario">☰</button>
 
-        <!-- Menú hamburguesa -->
-        <div class="hamburger-menu" id="hamburgerMenu">
-        <div class="avatar-section" id="avatarSection">
-            <div class="avatar" id="userAvatar"></div>
-            <input type="file" id="avatarInput" accept="image/*" style="display: none;">
-            <div class="user-info">
-            <p id="userName" >Invitado</p>
-            <p id="userEmail">No has iniciado sesión</p>
-            </div>
-        </div>
-        
-        <ul class="menu-options" id="menuOptions">
-            <li id="loginOption" class="btnLogin-popup">Iniciar sesión</li>
-            <li id="changeAccount" style="display: none;">Cambiar cuenta</li>
-            <li id="logoutOption" style="display: none;">Cerrar sesión</li>
-        </ul>
-        </div>
+<!-- Menú hamburguesa --> <div class="hamburger-menu" id="hamburgerMenu"> <div class="avatar-section" id="avatarSection"> <div class="avatar" id="userAvatar"></div> <input type="file" id="avatarInput" accept="image/*" style="display: none;"> <div class="user-info"> <p id="userName">Invitado</p> <p id="userEmail">No has iniciado sesión</p> </div> </div> <ul class="menu-options" id="menuOptions"> <li id="loginOption" class="btnLogin-popup">Iniciar sesión</li> <li id="changeAccount" style="display: none;">Cambiar cuenta</li> <li id="logoutOption" style="display: none;">Cerrar sesión</li> <li id="accountSettings" style="display: none;">Mas configuraciones</li> </ul> </div> <!-- Submenú de Configuración de Cuenta --> <div class="account-settings-menu" id="accountSettingsMenu" style="display: none;"> <h4>General</h4> <ul class="menu-options"> <li id="changeUsername">Cambiar nombre de usuario</li> <li id="changeEmail">Actualizar dirección de correo</li> <li id="managePassword">Gestionar contraseña</li> </ul> <h4>Preferencias</h4> <ul class="menu-options"> <li id="notificationsPreferences">Preferencias de notificaciones</li>  <li id="deleteAccount">Eliminar cuenta</li> </ul> <div id="cropModal" class="modal hidden"> <div class="modal-content"> <span id="closeCropModal" class="close">&times;</span> <h2>Recorta tu imagen</h2> <div> <img id="imageToCrop" style="max-width: 100%;" /> </div> <button id="cropAndSave">Recortar y guardar</button> </div> </div> <!-- Botón para cerrar configuración -->
+<button id="closeSettings" style="display: block; margin-top: 20px;">Cerrar Configuración</button>
+
+</div> <!-- Contenedor dinámico para contenido adicional (opcional) --> <div id="dynamicContent" style="display: none; padding: 16px; border: 1px solid #ddd; border-radius: 8px; margin-top: 20px;"> <!-- Este contenedor mostrará formularios o configuraciones específicas --> </div>
+
 
     <div class="text-center mt-4 mb-5">
         <h2 style="font-size: 2rem; font-weight: 700; color: #0067ce; text-shadow: 1px 1px 3px rgba(0,0,0,0.7);">
