--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </footer>
 
 
-<script src="firebase.js"></script>
+<script src="cro.js"></script>
 <script src="spript.js"></script>
 <script src="validacion-de-registro.js"></script>
 <script src="base_datos"></script>
